Fixing iOS z-index issue

--- a/nodeserver/src/resources/sass/main.scss
+++ b/nodeserver/src/resources/sass/main.scss
@@ -111,7 +111,7 @@ a:active {
     height: $time-scale-height;
     background-color: #aaa;
     position: absolute;
-    z-index: 2;
+    z-index: 1;
     .vertical-text {
       font-family: Arial, Helvetica, sans-serif;
       position: absolute;
@@ -135,7 +135,6 @@ a:active {
   #time-lines {
     position: absolute;
     height: 100%;
-    z-index: 1;
     .col-1 {
       border-left: dashed darken($grey, 10%) 1px;
     }
@@ -165,12 +164,12 @@ a:active {
             width: 100%;
             span {
               position: absolute;
-              z-index: 1;
             }
             span.name {
               left: 6px;
               top: 5px;
               cursor: pointer;
+              z-index:2
             }
             span.name:hover {
               font-weight: 800;
@@ -204,7 +203,7 @@ a:active {
   float:right;
   height: 100%;
   box-sizing: border-box;
-  z-index: -1;
+  position: relative;
 }
 
 #profile {
